RESOLVED FIXED114830
[BlackBerry] Invalidate spell checking requests in platform code
https://bugs.webkit.org/show_bug.cgi?id=114830
Summary [BlackBerry] Invalidate spell checking requests in platform code
Nima Ghanavatian
Reported 2013-04-18 13:59:42 PDT
Define a sentinal set to the last requested sequence id at focus change. All requests prior to this point will be rejected upon processing.
Attachments
Patch (3.66 KB, patch)
2013-04-18 14:03 PDT, Nima Ghanavatian
no flags
Patch (3.66 KB, patch)
2013-04-18 15:11 PDT, Nima Ghanavatian
no flags
Nima Ghanavatian
Comment 1 2013-04-18 14:03:52 PDT
Rob Buis
Comment 2 2013-04-18 14:52:35 PDT
Comment on attachment 198761 [details] Patch LGTM.
Nima Ghanavatian
Comment 3 2013-04-18 15:11:34 PDT
Rob Buis
Comment 4 2013-04-18 15:15:43 PDT
Comment on attachment 198770 [details] Patch LGTM.
WebKit Commit Bot
Comment 5 2013-04-18 15:44:28 PDT
Comment on attachment 198770 [details] Patch Clearing flags on attachment: 198770 Committed r148710: <http://trac.webkit.org/changeset/148710>
WebKit Commit Bot
Comment 6 2013-04-18 15:44:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.