[BlackBerry] Invalidate spell checking requests in platform code https://bugs.webkit.org/show_bug.cgi?id=114830

Patch by Nima Ghanavatian <nghanavatian@blackberry.com> on 2013-04-18
Reviewed by Rob Buis.

Internally reviewed by Mike Fenton.

Cache the value of the last requested sequence id at focus change.
All requests prior to this point will be rejected upon processing.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::InputHandler):
(BlackBerry::WebKit::InputHandler::requestCheckingOfString):
(BlackBerry::WebKit::InputHandler::stopPendingSpellCheckRequests):
* WebKitSupport/InputHandler.h:
(InputHandler):

Canonical link: https://commits.webkit.org/133226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148710 268f45cc-cd09-0410-ab3c-d52691b4dbfc